src/scss/block/dataview/cell.scss
@import "~scss/_vars";

.cell.c-title { cursor: text; }
.cell.c-title {
	.name { @include text-overflow-nw; display: inline-block; vertical-align: top; }
}

.cell.isEditing { border-radius: 2px; }
.cell.isEditing {
	.input-text { padding: 0px; height: 20px; }
	.icon.expand { display: none !important; }
	.cellContent { 
		position: absolute; left: 0px; top: -1px; overflow: visible !important; height: auto !important; white-space: normal !important; 
		box-shadow: 0px 0px 0px 2px $colorOrange inset; background: #fff; z-index: 10; min-height: calc(100% + 2px);
	}
	.cellContent {
		.name { display: inline-block; }
	}
}

.cell.isEditing.c-select, .cell.isEditing.c-object {
	.filter { display: inline-block; }
}

.cellContent { line-height: 20px; cursor: default; }
.cellContent {
	.iconObject { margin-right: 4px; vertical-align: top; }
	.name { display: inline-block; vertical-align: top; }
	div.name:empty { display: none; }
	span:empty { display: none; }
}

.cellContent.c-file {
	.inputWithFile { border: 0px; padding: 0px; }
	.element { display: inline-block; vertical-align: top; white-space: nowrap; max-width: 100%; margin-right: 8px; cursor: pointer; }
	.element {
		.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
	}
	.element.image {
		.iconObject { margin: 0px; }
	}
	.cellContent { white-space: normal; }
}

.cell.c-select {
	.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
	.DraggableTags::after { display: none; }

	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
	.filter {
		#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
		#placeHolder { color: $colorDarkGrey; }
	}

	.cellContent { line-height: 0px; }
	.cellContent {
		.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
		.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
		.DraggableTags::after { display: none; }
		.DraggableTags-tag { max-width: 100%; }

		.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
		.filter {
			#filter { 
				-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
				word-wrap: break-word; white-space: normal;
			}
			#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
		}
		.noPlaceholder {
			.filter #filter { position: relative; }
			#placeHolder { display: none; }
		}
	}
}

.cellContent.c-object {
	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; }
	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
	.filter {
		#filter { 
			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
			word-wrap: break-word; white-space: normal;
		}
		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
	}
	.noPlaceholder {
		.filter #filter { position: relative; }
		#placeHolder { display: none; }
	}
}

.cellContent.isName {
	.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
}

.cellContent.c-link {
	.icon.user { margin-right: 5px; }
}

.cellContent.canEdit.c-description, 
.cellContent.canEdit.c-date, 
.cellContent.canEdit.c-object, 
.cellContent.canEdit.c-select { cursor: text; }
.cellContent.canEdit.c-checkbox { cursor: pointer; }

.cellContent.c-url, .cellContent.c-email, .cellContent.c-phone {
	a { text-decoration: none; border-bottom: 1px solid #d2d0c2; transition: $transitionFast; cursor: pointer; }
	a:hover { border-color: $colorBlack; }
}

